# c

./: .gitignore  BUILD  MODULE.bazel  OWNERS  README.md  RELEASE.md  SECURITY_CONTACTS  WORKSPACE  settings
kubernetes/: CMakeLists.txt  Config.cmake.in  ConfigureChecks.cmake  Packing.cmake  PostTarget.cmake  PreTarget.cmake  README.md  conanfile.py  config.h.in
kubernetes/.openapi-generator/: COMMIT  FILES  swagger.json-default.sha256  swagger.json.sha256
kubernetes/api/: AdmissionregistrationAPI.c  AdmissionregistrationAPI.h  AdmissionregistrationV1API.c  AdmissionregistrationV1API.h  AdmissionregistrationV1alpha1API.c  AdmissionregistrationV1alpha1API.h  AdmissionregistrationV1beta1API.c  AdmissionregistrationV1beta1API.h  ApiextensionsAPI.c  ApiextensionsAPI.h  ApiextensionsV1API.c  ApiextensionsV1API.h  ApiextensionsV1beta1API.c  ApiextensionsV1beta1API.h  ApiregistrationAPI.c  ApiregistrationAPI.h  ApiregistrationV1API.c  ApiregistrationV1API.h  ApiregistrationV1beta1API.c  ApiregistrationV1beta1API.h  ApisAPI.c  ApisAPI.h  AppsAPI.c  AppsAPI.h  AppsV1API.c  AppsV1API.h  AppsV1beta1API.c  AppsV1beta1API.h  AppsV1beta2API.c  AppsV1beta2API.h  AuditregistrationAPI.c  AuditregistrationAPI.h  AuditregistrationV1alpha1API.c  AuditregistrationV1alpha1API.h  AuthenticationAPI.c  AuthenticationAPI.h  AuthenticationV1API.c  AuthenticationV1API.h  AuthenticationV1alpha1API.c  AuthenticationV1alpha1API.h  (+158 more)
kubernetes/config/: exec_provider.c  exec_provider.h  incluster_config.c  incluster_config.h  kube_config.c  kube_config.h  kube_config_common.h  kube_config_model.c  kube_config_model.h  kube_config_util.c  kube_config_util.h  kube_config_yaml.c  kube_config_yaml.h
kubernetes/docs/: AdmissionregistrationAPI.md  AdmissionregistrationV1API.md  AdmissionregistrationV1alpha1API.md  AdmissionregistrationV1beta1API.md  ApiextensionsAPI.md  ApiextensionsV1API.md  ApiextensionsV1beta1API.md  ApiregistrationAPI.md  ApiregistrationV1API.md  ApiregistrationV1beta1API.md  ApisAPI.md  AppsAPI.md  AppsV1API.md  AppsV1beta1API.md  AppsV1beta2API.md  AuditregistrationAPI.md  AuditregistrationV1alpha1API.md  AuthenticationAPI.md  AuthenticationV1API.md  AuthenticationV1alpha1API.md  AuthenticationV1beta1API.md  AuthorizationAPI.md  AuthorizationV1API.md  AuthorizationV1beta1API.md  AutoscalingAPI.md  AutoscalingV1API.md  AutoscalingV2API.md  AutoscalingV2beta1API.md  AutoscalingV2beta2API.md  BatchAPI.md  BatchV1API.md  BatchV1beta1API.md  BatchV2alpha1API.md  CertificatesAPI.md  CertificatesV1API.md  CertificatesV1alpha1API.md  CertificatesV1beta1API.md  CoordinationAPI.md  CoordinationV1API.md  CoordinationV1alpha1API.md  (+1354 more)
kubernetes/include/: apiClient.h  generic.h  utils.h
kubernetes/model/: admissionregistration_v1_service_reference.c  admissionregistration_v1_service_reference.h  admissionregistration_v1_webhook_client_config.c  admissionregistration_v1_webhook_client_config.h  admissionregistration_v1beta1_service_reference.c  admissionregistration_v1beta1_service_reference.h  admissionregistration_v1beta1_webhook_client_config.c  admissionregistration_v1beta1_webhook_client_config.h  apiextensions_v1_service_reference.c  apiextensions_v1_service_reference.h  apiextensions_v1_webhook_client_config.c  apiextensions_v1_webhook_client_config.h  apiextensions_v1beta1_service_reference.c  apiextensions_v1beta1_service_reference.h  apiextensions_v1beta1_webhook_client_config.c  apiextensions_v1beta1_webhook_client_config.h  apiregistration_v1_service_reference.c  apiregistration_v1_service_reference.h  apiregistration_v1beta1_service_reference.c  apiregistration_v1beta1_service_reference.h  apps_v1beta1_deployment.c  apps_v1beta1_deployment.h  apps_v1beta1_deployment_condition.c  apps_v1beta1_deployment_condition.h  apps_v1beta1_deployment_list.c  apps_v1beta1_deployment_list.h  apps_v1beta1_deployment_rollback.c  apps_v1beta1_deployment_rollback.h  apps_v1beta1_deployment_spec.c  apps_v1beta1_deployment_spec.h  apps_v1beta1_deployment_status.c  apps_v1beta1_deployment_status.h  apps_v1beta1_deployment_strategy.c  apps_v1beta1_deployment_strategy.h  apps_v1beta1_rollback_config.c  apps_v1beta1_rollback_config.h  apps_v1beta1_rolling_update_deployment.c  apps_v1beta1_rolling_update_deployment.h  apps_v1beta1_scale.c  apps_v1beta1_scale.h  (+2552 more)
kubernetes/src/: apiClient.c  generic.c  utils.c
kubernetes/unit-test/: manual_test_v1_service_port.c  test_admissionregistration_v1_webhook_client_config.c  test_admissionregistration_v1beta1_webhook_client_config.c  test_apiextensions_v1_webhook_client_config.c  test_apiextensions_v1beta1_service_reference.c  test_apiextensions_v1beta1_webhook_client_config.c  test_apps_v1beta1_deployment_spec.c  test_apps_v1beta1_deployment_status.c  test_apps_v1beta1_deployment_strategy.c  test_apps_v1beta1_rollback_config.c  test_apps_v1beta1_rolling_update_deployment.c  test_authentication_v1_token_request.c  test_core_v1_endpoint_port.c  test_core_v1_event.c  test_core_v1_event_list.c  test_core_v1_event_series.c  test_core_v1_resource_claim.c  test_discovery_v1_endpoint_port.c  test_events_v1_event.c  test_events_v1_event_list.c  test_events_v1_event_series.c  test_extensions_v1beta1_allowed_csi_driver.c  test_extensions_v1beta1_allowed_host_path.c  test_extensions_v1beta1_deployment_list.c  test_extensions_v1beta1_deployment_status.c  test_extensions_v1beta1_deployment_strategy.c  test_extensions_v1beta1_http_ingress_path.c  test_extensions_v1beta1_http_ingress_rule_value.c  test_extensions_v1beta1_id_range.c  test_extensions_v1beta1_ingress.c  test_extensions_v1beta1_ingress_list.c  test_extensions_v1beta1_ingress_spec.c  test_extensions_v1beta1_ingress_status.c  test_extensions_v1beta1_pod_security_policy.c  test_extensions_v1beta1_rolling_update_deployment.c  test_extensions_v1beta1_scale.c  test_extensions_v1beta1_scale_spec.c  test_extensions_v1beta1_se_linux_strategy_options.c  test_extensions_v1beta1_supplemental_groups_strategy_options.c  test_flowcontrol_v1_subject.c  (+1033 more)
kubernetes/watch/: watch_util.c  watch_util.h
kubernetes/websocket/: kube_exec.c  (+3 more)
(+407 files in other folders)
